<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Signature Mobile</string>
    <string name="loading_app">Cargando aplicación&#8230;</string>

    <!-- ID Admob -->
	<string name="id_admob">a150f16a4a37b08</string>
    
    <!-- General error -->
   	<string name="ok">Ok</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="info">Información</string>
	<string name="yes">Si</string>
	<string name="no">No</string>
    <string name="error">Error</string>
	<string name="nothing">No seleccionado</string>
	<string name="no_bluetooth_device">El dispositivo que estas utilizando no dispone de módulo Bluetooth</string>
	
	<!-- Configuration process strings -->
	<string name="unable_to_configure_application">Se produjeron errores al cargar la configuración actual de la aplicación.</string>
	<string name="not_connected_bluetooth">Parece que el Bluetooth no esta conectado. Por favor encienda el bluetooth y vuelva a intentar buscar dispositivos.</string>
	
	<!-- UI Sign user home mobile -->
	<string name="title_sign_user_home_mobile">Gestión de clase</string>
	<string name="sign_user_main">Firmar usuario</string>
	<string name="list_users">Listar usuarios</string>
	<string name="create_user_main">Crear usuario</string>
	<string name="write_file_users">Enviar fichero</string>
	<string name="select_application_send_file">Seleccione la aplicación para enviar el fichero</string>
	
	<!-- UI Sign class home mobile -->
	<string name="title_sign_class_home_mobile">Gestión de asignatura</string>
	<string name="create_class_main">Crear clase</string>
	<string name="select_class_main">Seleccionar clase</string>
	
	<!-- UI Add user -->
	<string name="select_user">Seleccione el dispositivo:</string>
	<string name="not_exits_devices_select_user">Lo sentimos. No existen dispositivos para seleccionar</string>
	<string name="device_select_user">Dispositivo seleccionado</string>
	<string name="name_user">Nombre de usuario</string>
	<string name="name_user_hint">Nombre</string>
	<string name="password_user">Contraseña</string>
	<string name="password_user_hint">Contraseña</string>
	<string name="twitter_user">Usuario Twitter</string>
	<string name="twitter_user_hint">Usuario Twitter</string>
	<string name="create_user">Crear usuario</string>
	<string name="delete_user">Eliminar usuario</string>
	<string name="search_user_twitter">Buscar twitter</string>
	<string name="updates_devices_bluetooh">Actualizar dispositivos</string>
	<string name="select_devices_bluetooth">Seleccionar dispositivo</string>
	<string name="select_devices_username">Seleccionar usuario</string>
	<string name="write_key_nfc">Escribir clave NFC</string>
	<string name="name_user_empty">El nombre de usuario no puede estar vacío</string>
	<string name="password_user_empty">La contraseña del usario no puede estar vacía</string>
	<string name="device_user_empty">Debes seleccionar un dispositivo para poder registrarse</string>
	<string name="device_already_register">El usuario que intentas registrar con su dispositivo, ya se encuentra registrado</string>
	<string name="device_not_functionality_nfc">El dispositivo no dispone de tecnología NFC. Utilice el Bluetooth para registrarse.</string>
	<string name="register_user_ok">Usuario registrado correctamente</string>
	<string name="register_user_ko">No ha sido posible registrar el usuario</string>
	<string name="register_user_dialog_title_nfc">Escribiendo etiqueta NFC</string>
	<string name="register_user_dialog_description_nfc">Acerque la etiqueta NFC al dispositivo para enviarle la información</string>
	<string name="register_user_dialog_nfc_write_ok">Etiqueta escrita correctamente</string>
	<string name="register_user_dialog_nfc_write_ko">No ha sido posible escribir la etiqueta correctamente</string>
	<string name="register_user_not_selected_device">No ha seleccionado ningún dispositivo. Por favor, selecciona uno para poder crear el usuario</string>
	
	<!-- UI Create user device list -->
	<string name="searching_devices_bluetooth">Buscando dispositivos&#8230;</string>
	<string name="searching_devices_bluetooth_title">Lista de dispositivos</string>
	
	<!-- UI Sign Mobile -->
	<string name="title_sign_user_title">Firmar usuario</string>
	<string name="unable_sign_user">Lo sentimos. Ha sido imposible firmar con el usuario seleccionado. No se encuentra registrado.</string>
	<string name="search_devices_bluetooth">Buscando dispositivos para poder firmar&#8230;</string>
	<string name="devices_user_sign">Dispositivos que han firmado</string>
	
	<!-- UI Sign accept Mobile -->
	<string name="title_sign_accept_user_title">Confirmar usuario</string>
	<string name="confirm_title_device_text_1">¿Quieres firmar como </string>
	<string name="confirm_title_device_text_2">Para confirmar su asistencia, por favor, introduzca su contraseña.</string>
	<string name="confirm_password_device_hint">Contraseña</string>
	<string name="sign_accept_user">Se ha confirmado su asistencia. Gracias.</string>
	<string name="unable_sign_same_day_user">Ya ha firmado hoy, no puede firmar más veces en un día. Imposible firmar.</string>
	<string name="password_not_equals_sign_accept_user">La contraseña no coincide con el usuario registrado. Imposible firmar.</string>
	<string name="unable_sign_accept_user">Lo sentimos. No existe ningún usuario registrado con ese dispositivo. Imposible firmar.</string>

	<!-- UI List sign mobile -->
	<string name="title_list_sign_title">Lista usuarios</string>
	<string name="list_devices_sign">La lista de usuarios es:</string>
	<string name="list_devices_sign_empty">No existen usuario para listar</string>
	
	<!-- UI Details sign mobile -->
	<string name="title_list_details_sign_title">Detalle de usuario</string>
	<string name="user_delete_ok">El usuario ha sido eliminado correctamente</string>
	<string name="user_delete_ko">Imposible eliminar el usuario</string>
	<string name="user_create_sign">Usuario creado el</string>
	<string name="user_last_sign">Última firma del usuario</string>
	<string name="user_twitter_sign">Usuario de twitter</string>
	<string name="user_nfc_key_yes">Tiene etiqueta NFC</string>
	<string name="user_nfc_key_no">No tiene etiqueta NFC</string>
	<string name="user_tickets_sign">Asistencias</string>
	<string name="user_tickets_not_sign_already">No ha firmado en el sistema</string>

	<!-- UI Create asignature -->
	<string name="create_asignature_title">Crear asignatura</string>
	<string name="create_asignature_name">Nombre asignatura: </string>
	<string name="name_asignature_hint">Asignatura</string>
	<string name="create_asignature">Crear asignatura</string>
	<string name="name_asignature_empty">El nombre de la asignatura no puede estar vacío</string>
	<string name="asignature_already_register">Las asignatura que intentas registrar con su dispositivo, ya se encuentra registrada</string>
	<string name="create_asignature_ok">Asignatura creada correctamente</string>
	<string name="create_asignature_ko">No ha sido posible crear la asignatura</string>
	
	<!-- UI Create class -->
	<string name="create_class_title">Crear clase</string>
	<string name="create_class_name">Nombre clase: </string>
	<string name="name_class_hint">Clase</string>
	<string name="create_class">Crear clase</string>
	<string name="name_class_empty">El nombre de la asignatura no puede estar vacío</string>
	<string name="class_already_register">Las clase que intentas registrar con su dispositivo, ya se encuentra creada</string>
	<string name="create_class_ok">Clase creada correctamente</string>
	<string name="create_class_ko">No ha sido posible crear la clase</string>
	
	<!-- UI Sign user home mobile -->
	<string name="title_signature_mobile">Gestión de asignaturas</string>
	<string name="create_asignature_main">Crear asignatura</string>
	<string name="select_asignature_main">Seleccionar asignatura</string>

	<!-- UI List class mobile -->
	<string name="title_list_class_title">Lista clases</string>
	<string name="list_devices_class">La lista de clases es:</string>
	<string name="list_devices_class_empty">No existen clases para listar</string>
	<string name="unable_sign_accept_class">Lo sentimos. No existe ninguna clase registrada con ese nombre.</string>
	
	<!-- UI List asignature mobile -->
	<string name="title_list_asignature_title">Lista asignaturas</string>
	<string name="list_devices_asignature">La lista de asignaturas es:</string>
	<string name="list_devices_asignature_empty">No existen asignaturas para listar</string>
	<string name="unable_sign_accept_asignature">Lo sentimos. No existe ninguna asignatura registrada con ese nombre.</string>
	
	<!-- Email intent -->
	<string name="email_subject">[Signature Mobile] Fichero de alumnos de la clase\u0020</string>
	<string name="email_content">Este correo ha sido generado por la aplicación Signature Mobile. Por favor, descargue el archivo adjunto (CSV) para obtener los alumnos que han firmado en la clase.</string>
	
	<!-- UI List username mobile -->
	<string name="title_list_username_title">Lista usuarios</string>
	<string name="list_username_asignature">La lista de usuarios es:</string>
	<string name="list_devices_username_empty">No existen usuarios para listar en esta asignatura</string>
	<string name="unable_sign_accept_username">Lo sentimos. No existe ningún usuario para esta asignatura.</string>
	
	<!-- Content description  -->
	<string name="content_description_image">Descripción de una imagen</string>
	
</resources>
