<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  android:id="@+id/parentLayout"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:baselineAligned="false"
  android:gravity="center" 
  android:layout_margin="50dp" 
  android:layout_gravity="center">
  	
    		<TextView
	    	    android:id="@+id/asignatureTextView"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:textSize="30dp"
	    	    android:textStyle="bold"
	    	    android:layout_marginBottom="35dp"
	    	    android:textColor="@color/black"/>		
    
	    	<Button
	    	    android:id="@+id/createClassButton"
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	    	    android:text="@string/create_class_main"
	    	    android:layout_margin="3dp"
	    	   	android:background="@drawable/black_button"
	    	    style="@style/ButtonText"/>
	    	
	    	<Button
	    	    android:id="@+id/selectClassButton"
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	    	    android:text="@string/select_class_main"
	    	  	android:layout_margin="3dp"
	    	    android:background="@drawable/black_button"
	    	    style="@style/ButtonText"/>
	    	
	    	<Button
	    	    android:id="@+id/createUserButton"
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	    	    android:text="@string/create_user_main"
	    	    android:layout_margin="3dp"
	    	   	android:background="@drawable/black_button"
	    	    style="@style/ButtonText"/>
		
			<Button
	    	    android:id="@+id/listUserButton"
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	    	    android:text="@string/list_users"
	    	    android:layout_margin="3dp"
	    	   	android:background="@drawable/black_button"
	    	    style="@style/ButtonText"/>
	    	
	    	<Button
	    	    android:id="@+id/fileUserButton"
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	    	    android:text="@string/write_file_users"
	    	    android:layout_margin="3dp"
	    	    android:background="@drawable/black_button"
	    	    style="@style/ButtonText"/>
	    	
</LinearLayout>