<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  android:id="@+id/parentLayout"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:baselineAligned="false">
    	
		<LinearLayout 
    	 	android:layout_width="fill_parent"
    	 	android:layout_height="0dp"
    	 	android:orientation="vertical" 
    	 	android:layout_weight="35" 
    	 	android:layout_marginLeft="10dp" 
    	 	android:layout_marginRight="10dp" 
    	 	android:layout_marginTop="10dp">

			<TextView
				android:id="@+id/confirmTitleTextView"
	    	 	android:layout_width="fill_parent"
	    	 	android:layout_height="wrap_content"
	    	 	android:textStyle="bold"
	    	 	android:textSize="15sp"
	    	 	android:textColor="@color/greyText"/>
	    	
					<LinearLayout 
			    	 	android:layout_width="fill_parent"
			    	 	android:layout_height="wrap_content"
			    	 	android:orientation="horizontal" 
			    	 	android:layout_marginTop="10dp">
						
						<LinearLayout 
				    	 	android:layout_width="wrap_content"
				    	 	android:layout_height="wrap_content"
				    	 	android:orientation="vertical" 
				    	 	android:layout_gravity="center" 
				    	 	android:gravity="center" 
				    	 	android:layout_marginLeft="10dp" 
				    	 	android:layout_marginRight="10dp">
			    	  	
				    		    <ImageView 
									android:id="@+id/userTwitterImageView"
				    		       	android:layout_width="fill_parent"
					    	 		android:layout_height="fill_parent"
					    	 		android:background="@drawable/twitter_user_small"
					    	 		android:layout_gravity="center"/>
			    		    
			    	  	</LinearLayout>
		    		    <LinearLayout 
				    	 	android:layout_width="fill_parent"
				    	 	android:layout_height="wrap_content"
				    	 	android:orientation="vertical" 
				    	 	android:layout_gravity="center" 
				    	 	android:layout_weight="1">
		    		    
				    	    	<EditText
				    	    	    android:id="@+id/passwordEditText"
						    	 	android:layout_width="fill_parent"
						    	 	android:layout_height="wrap_content"
						    	 	android:textSize="15sp"
						    	 	android:singleLine="true"
						    	 	android:maxLines="1"
						    	 	android:hint="@string/confirm_password_device_hint"
						    	 	android:nextFocusDown="@+id/createButton"
					    			android:background="@drawable/grey_textview_background"
						    		android:inputType="textPassword"
						    	    />
		    	  		
		    	  		</LinearLayout>
		    		</LinearLayout>
					
										
	    			<LinearLayout
	    			    android:layout_width="fill_parent"
	    			    android:layout_height="wrap_content"
	    			    android:gravity="center_horizontal"
	    			    android:orientation="horizontal"
	    			    android:layout_marginTop="10dp">
					
		    			<Button
				    	    android:id="@+id/acceptButton"
				    	    android:layout_width="0dp"
				    	    android:layout_height="wrap_content"
				    	    android:layout_weight="1"
				    	    android:text="@string/accept"
				    	  	android:layout_marginRight="3dp"
				    	 	android:background="@drawable/grey_button"
				    	    style="@style/ButtonText"/>
	    			    
	    			    <Button
	    			        android:id="@+id/cancelButton"
	    			        android:layout_width="0dp"
	    			        android:layout_height="fill_parent"
	    			    	android:layout_weight="1"
	    			        android:text="@string/cancel"
	    			        android:layout_marginLeft="3dp"
	    			     	android:background="@drawable/grey_button"
	    	    			style="@style/ButtonText"/>
	    			    	    			    
	    			</LinearLayout>

		</LinearLayout>
</LinearLayout>